--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,10 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  
+    <div id="loading-screen">
+      <img src="/images/petShop/My_Pet_Care noBG.png" alt="">
+    </div>
+    <app-root style="display: none;"></app-root>
 </body>
 </html>
