--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,8 @@
 <body>
   
     <div id="loading-screen">
-      <img src="/images/petShop/My_Pet_Care noBG.png" alt="">
+      <img src="/images/petShop/dogLoading.gif" alt="">
+      <h1 id="title">My Pet Care</h1>
     </div>
     <app-root style="display: none;"></app-root>
 </body>
