ajustes tela de login

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 <body>
   
     <div id="loading-screen">
-      <img src="/images/petShop/dogLoading.gif" alt="">
+      <img src="/images/dogLoading.gif" alt="">
       <h1 id="title">My Pet Care</h1>
     </div>
     <app-root style="display: none;"></app-root>
